# seabird-python

./: .gitignore  LICENSE  README.md  pyproject.toml
seabird/: __init__.py  common.py  seabird.py
